Significantly improved angle-based repulsion for the "Real" molecules
Fixed "kit" radio button clicking bug
Added "Basics" support for 2nd tab
# 1.01.14 (59229) Dec 9, 2011
12/9/11 dev version for Mac testing
Added white background with black text for kit version of 2nd tab
Subscript fixes for kit version of 2nd tab
Tab handling fixes
# 1.01.13 (59114) Dec 6, 2011
12/6/11 Added Real / Model views and rotational matching between them, along with kit-version of 2nd tab
12/6/11 #3174, consolidated sim-sharing strings: put sim-specific strings in MoleculeShapesSimSharing, use common strings where appropriate
# 1.01.12 (58941) Nov 30, 2011
11/30/11 Interface progress for the "dropdown box" version of tab 2
# 1.01.11 (58797) Nov 25, 2011
11/25/11 Testing for 2nd tab
# 1.01.10 (58368) Nov 4, 2011
For the Colorado and Utah studies, enable the "less than" and "greater than" text.
# 1.01.09 (58349) Nov 4, 2011
Added a message for middle-button press, see #3136
# 1.01.08 (58345) Nov 3, 2011
Fixed threading issue for message sending when bonds created by dragging, see #3136
Changed "bondsRemoved" to "bondsChanged", see #3144
# 1.01.07 (58331) Nov 3, 2011
Added a message for background color change, see #3144
Report on both electron and molecule geometry when they change, see #3136
# 1.01.06 (58278) Nov 2, 2011
Added system response for structure change, see #3136
# 1.01.05 (58221) Nov 1, 2011
# 1.01.04 (58186) Oct 31, 2011
10/31/11 Updated message formatting, see #3136
# 1.01.03 (58151) Oct 31, 2011
Redeploy after changing message output style, see #3136
Added a separate flavor for sim event reporting, see #3136
# 1.01.02 (58068) Oct 27, 2011
# 1.01.01 (58066) Oct 27, 2011
Hide spurious "dragging = false" messages when clicking on piccolo swing buttons
Added simsharing project as a dependency of molecule-shapes for testing, should be removed before any more public deploys of this sim
Added sim sharing events for dragging atoms, electron pairs or rotating the view